--- a/vignettes/test_tidygraph.Rmd
+++ b/vignettes/test_tidygraph.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Testing tidygraph: map_bfs()"
+title: "Testing tidygraph: map_dfs()"
 author: "JM Delgado"
 date: "`r Sys.Date()`"
 output:
@@ -20,16 +20,37 @@ knitr::opts_chunk$set(
 library(dplyr,warn.conflicts=FALSE)
 library(tidygraph,warn.conflicts=FALSE)
 library(ggraph,warn.conflicts=FALSE)
-library(a5udes)
 library(igraph)
 
 ```
 
-```{r, results='asis'}
-id='44755' # oros
+With a generic graph:
 
+```{r, results='asis'}
+
+
+
+g=create_tree(40, children = 3, directed = TRUE,mode='out') %>%
+  mutate(name=as.factor(1:40)) %>%
+  mutate(rank=map_dfs_back_int(node_is_root(),.f=function(node,rank,...) {
+    return(rank)  
+  }))
+
+ggraph(g) +
+  geom_node_point() +
+  geom_node_label(aes(label = rank)) +# repel=TRUE
+  geom_edge_link0(arrow = arrow(length = unit(4, 'mm')))
+```
+
+With a reservoir graph upstream of oros:
+
+```{r, results='asis'}
+
+library(a5udes)
+
+# id='44755' # oros
 id='34560' # smaller network
-id='34689' # even smaller
+# id='34689' # even smaller
 
 sub=all_simple_paths(reservoir_graph,from=id,mode='in') %>%
   unlist %>%
@@ -37,26 +58,39 @@ sub=all_simple_paths(reservoir_graph,from=id,mode='in') %>%
 
 subgraph = induced_subgraph(reservoir_graph, sub ,impl='auto')
 
+graph.reverse <- function (graph) {
+  if (!is.directed(graph))
+    return(graph)
+  e <- get.data.frame(graph, what="edges")
+  ## swap "from" & "to"
+  neworder <- 1:length(e)
+  neworder[1:2] <- c(2,1)
+  e <- e[neworder]
+  names(e) <- names(e)[neworder]
+  graph.data.frame(e, vertices = get.data.frame(graph, what="vertices"))
+}
 
-graph=subgraph %>% as_tbl_graph %>% activate('nodes') %>%
-  mutate(value=1) %>%
-  mutate(value_acc = map_bfs_back_dbl(node_is_leaf(), .f = function(node, path, ...) {
-    sum(.N()$value[c(node, path$node)])
+g=subgraph %>%
+  graph.reverse(.) %>%
+  as_tbl_graph %>% mutate(rank=map_dfs_back_int(node_is_root(),.f=function(node,rank,...) {
+    return(rank)  
   }))
 
+ggraph(g) +
+  geom_node_point() +
+  geom_node_label(aes(label = rank)) +# repel=TRUE
+  geom_edge_link0(arrow = arrow(length = unit(4, 'mm')))
+```
 
+Route overspill:
 
-graph=create_tree(40, children = 3, directed = TRUE,mode='out') %>%  
-  set_vertex_attr("label",value=seq(1,40)) %>%
-  mutate(value = 2 )%>%
-  mutate(value_acc = map_bfs_back_dbl(node_is_root(), .f = function(node, path, ...) {
-    sum(.N()$value[c(node, path$node)])
-    }))
+1. define size of each node's dataframe by determining how many upstream nodes are there. Reserve memory for this.
+2. loop on rank
+3. on each node do a water balance and pass results downstream
 
-graph %>% as_tibble %>% pull(value_acc) %>% max
+```{r, results='asis'}
 
-ggraph(graph) +
-  geom_node_point(aes(size=value_acc)) +
-  geom_edge_bend2()
+g %>% activate(nodes) %>% arrange(desc(rank)) %>% as_tibble
+
 
 ```
