regression for getting basin area from area of watermask

--- a/vignettes/water_balance.Rmd
+++ b/vignettes/water_balance.Rmd
@@ -44,7 +44,7 @@ ggraph(g) +
 
 ---
 
-With a reservoir graph upstream of oros:
+With a reservoir graph upstream of Orós:
 
 ```{r, results='asis'}
 
